--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 			<div class="col-md-6 ">
 				<div class="build contact clearfix text-center">
 					<span class="fa fa-envelope"></span>
-					<p>email.riccra@mailismagic.com</p>
+					<p>richard@riccra.com</p>
 				</div>
 			</div>
 		</div><!-- end row -->
