--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="author" content="riccra">
 <meta name=”robots” content="index, nofollow">
 	<head>
-		<title>Welcome to riccra.com - Software services for mobile and cloud</title>
+		<title>Software services for mobile and cloud customers - riccra.com</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<style>
